--- a/Portfolio/appsettings.Development.json
+++ b/Portfolio/appsettings.Development.json
@@ -1,9 +1,16 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "Server=(localdb)\\mssqllocaldb;Database=aspnet-Portfolio-4946BBF6-2F32-4C2E-815C-B5DC6803DA2A;Trusted_Connection=True;MultipleActiveResultSets=true"
+
+  },
+  "UserSettings": {
+    "UserEmail": "eterdemon@email.com",
+    "UserPassword": "P@ssw0rd"
+  },
   "Logging": {
     "LogLevel": {
-      "Default": "Debug",
-      "System": "Information",
-      "Microsoft": "Information"
+      "Default": "Warning"
     }
-  }
+  },
+  "AllowedHosts": "*"
 }
