--- a/Portfolio/Data/Projects.json
+++ b/Portfolio/Data/Projects.json
@@ -1,9 +1,44 @@
 ﻿[
   {
-    "Title": "RoundCalcqwert",
+    "Title": "RoundCalc",
     "ShortDescription": "RoundCalc is a ergonomic calculator for Android Wear Devices.",
     "LongDescription": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla efficitur faucibus molestie. Phasellus et lorem id ante viverra mattis eu sed erat. Nunc viverra eget quam sit amet tempor. Phasellus porta tortor sed sapien tempus placerat. Sed pellentesque aliquam arcu, in euismod dolor malesuada ac. Pellentesque ipsum purus, pulvinar a malesuada non, accumsan ac est. Nam egestas libero ut eros elementum finibus. Cras eleifend, diam eget hendrerit congue, mi augue fermentum odio, nec rhoncus lectus diam sit amet leo. Maecenas ac ex sit amet ante commodo commodo et quis enim. Etiam finibus, nulla nec vulputate luctus, orci felis aliquet sapien, sed congue lorem tortor non leo. Curabitur ultrices enim ex, a viverra ante ullamcorper ac. Pellentesque vulputate faucibus lectus in scelerisque",
     "ImageUrl": "https://github.com/kklosowski/RoundCalc/raw/master/img/round_calc_icon_min.png",
     "GithubUrl": "https://github.com/kklosowski/RoundCalc"
+  },
+  {
+    "Title": "Artatawe",
+    "ShortDescription": "Artatawe is a group project developed as a part of CS-230 and CS-235 Software Engineering modules at Swansea University.",
+    "LongDescription": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla efficitur faucibus molestie. Phasellus et lorem id ante viverra mattis eu sed erat. Nunc viverra eget quam sit amet tempor. Phasellus porta tortor sed sapien tempus placerat. Sed pellentesque aliquam arcu, in euismod dolor malesuada ac. Pellentesque ipsum purus, pulvinar a malesuada non, accumsan ac est. Nam egestas libero ut eros elementum finibus. Cras eleifend, diam eget hendrerit congue, mi augue fermentum odio, nec rhoncus lectus diam sit amet leo. Maecenas ac ex sit amet ante commodo commodo et quis enim. Etiam finibus, nulla nec vulputate luctus, orci felis aliquet sapien, sed congue lorem tortor non leo. Curabitur ultrices enim ex, a viverra ante ullamcorper ac. Pellentesque vulputate faucibus lectus in scelerisque",
+    "ImageUrl": "https://github.com/kklosowski/Artatawe/raw/master/demo/logo.png",
+    "GithubUrl": "https://github.com/kklosowski/Artatawe"
+  },
+  {
+    "Title": "Game of Life",
+    "ShortDescription": "Object oriented implementation of game of life in Java.",
+    "LongDescription": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla efficitur faucibus molestie. Phasellus et lorem id ante viverra mattis eu sed erat. Nunc viverra eget quam sit amet tempor. Phasellus porta tortor sed sapien tempus placerat. Sed pellentesque aliquam arcu, in euismod dolor malesuada ac. Pellentesque ipsum purus, pulvinar a malesuada non, accumsan ac est. Nam egestas libero ut eros elementum finibus. Cras eleifend, diam eget hendrerit congue, mi augue fermentum odio, nec rhoncus lectus diam sit amet leo. Maecenas ac ex sit amet ante commodo commodo et quis enim. Etiam finibus, nulla nec vulputate luctus, orci felis aliquet sapien, sed congue lorem tortor non leo. Curabitur ultrices enim ex, a viverra ante ullamcorper ac. Pellentesque vulputate faucibus lectus in scelerisque",
+    "ImageUrl": "https://c1.staticflickr.com/3/2503/3890850052_a41ac6a3f3.jpg",
+    "GithubUrl": "https://github.com/kklosowski/GameOfLife"
+  },
+  {
+    "Title": "Google Hashcode 2017",
+    "ShortDescription": "Solution to google hashcode 2017",
+    "LongDescription": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla efficitur faucibus molestie. Phasellus et lorem id ante viverra mattis eu sed erat. Nunc viverra eget quam sit amet tempor. Phasellus porta tortor sed sapien tempus placerat. Sed pellentesque aliquam arcu, in euismod dolor malesuada ac. Pellentesque ipsum purus, pulvinar a malesuada non, accumsan ac est. Nam egestas libero ut eros elementum finibus. Cras eleifend, diam eget hendrerit congue, mi augue fermentum odio, nec rhoncus lectus diam sit amet leo. Maecenas ac ex sit amet ante commodo commodo et quis enim. Etiam finibus, nulla nec vulputate luctus, orci felis aliquet sapien, sed congue lorem tortor non leo. Curabitur ultrices enim ex, a viverra ante ullamcorper ac. Pellentesque vulputate faucibus lectus in scelerisque",
+    "ImageUrl": "https://www.hashcode.fr/images/logo-icon-hq.png",
+    "GithubUrl": "https://github.com/kklosowski/GoogleHashCode2017"
+  },
+  {
+    "Title": "Google Hashcode 2018",
+    "ShortDescription": "Team Slavs solution to Google Hashcode 2018. Achieved place: 411 World, 42 UK.",
+    "LongDescription": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla efficitur faucibus molestie. Phasellus et lorem id ante viverra mattis eu sed erat. Nunc viverra eget quam sit amet tempor. Phasellus porta tortor sed sapien tempus placerat. Sed pellentesque aliquam arcu, in euismod dolor malesuada ac. Pellentesque ipsum purus, pulvinar a malesuada non, accumsan ac est. Nam egestas libero ut eros elementum finibus. Cras eleifend, diam eget hendrerit congue, mi augue fermentum odio, nec rhoncus lectus diam sit amet leo. Maecenas ac ex sit amet ante commodo commodo et quis enim. Etiam finibus, nulla nec vulputate luctus, orci felis aliquet sapien, sed congue lorem tortor non leo. Curabitur ultrices enim ex, a viverra ante ullamcorper ac. Pellentesque vulputate faucibus lectus in scelerisque",
+    "ImageUrl": "https://urlab.be/media/event_pictures/hashcode_h77zozy.png",
+    "GithubUrl": "https://github.com/kklosowski/GoogleHashCode2018"
+  },
+  {
+    "Title": "Next Project",
+    "ShortDescription": "Place for my next project",
+    "LongDescription": "Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla efficitur faucibus molestie. Phasellus et lorem id ante viverra mattis eu sed erat. Nunc viverra eget quam sit amet tempor. Phasellus porta tortor sed sapien tempus placerat. Sed pellentesque aliquam arcu, in euismod dolor malesuada ac. Pellentesque ipsum purus, pulvinar a malesuada non, accumsan ac est. Nam egestas libero ut eros elementum finibus. Cras eleifend, diam eget hendrerit congue, mi augue fermentum odio, nec rhoncus lectus diam sit amet leo. Maecenas ac ex sit amet ante commodo commodo et quis enim. Etiam finibus, nulla nec vulputate luctus, orci felis aliquet sapien, sed congue lorem tortor non leo. Curabitur ultrices enim ex, a viverra ante ullamcorper ac. Pellentesque vulputate faucibus lectus in scelerisque",
+    "ImageUrl": "https://cloud.netlifyusercontent.com/assets/344dbf88-fdf9-42bb-adb4-46f01eedd629/242ce817-97a3-48fe-9acd-b1bf97930b01/09-posterization-opt.jpg",
+    "GithubUrl": "https://github.com/kklosowski"
   }
 ]
