--- a/Portfolio/Portfolio.csproj
+++ b/Portfolio/Portfolio.csproj
@@ -6,6 +6,13 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="wwwroot\images\patternstest\**" />
+    <Content Remove="wwwroot\images\patternstest\**" />
+    <EmbeddedResource Remove="wwwroot\images\patternstest\**" />
+    <None Remove="wwwroot\images\patternstest\**" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="AntiXSS" Version="4.3.0" />
     <PackageReference Include="Microsoft.AspNetCore.App" />
     <PackageReference Include="Microsoft.AspNetCore.Razor.Design" Version="2.1.2" PrivateAssets="All" />
@@ -15,7 +22,6 @@
   <ItemGroup>
     <Folder Include="Areas\Identity\Services\" />
     <Folder Include="Pages\" />
-    <Folder Include="wwwroot\images\patternstest\" />
   </ItemGroup>
 
   <ItemGroup>
